--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
 
 <body>
 
-<p>Hello World!!</p>
+<script>
+var quotes = [
+      "The quick brown fox jumps over the lazy dog.",
+      "Look out! There are llamas!",
+      "No, really, don't get up.",
+      "Whatever",
+      "Etc."    
+    ];
+
+document.getElementById("changeQuote").addEventListener("click", function() {
+    var q = quotes[ Math.floor( Math.random() * quotes.length ) ];
+    document.getElementById("test").innerHTML = q;     
+});
+</script>
+
+<button id="changeQuote">Change Quote</button>
+
 
 </body>
 
