--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <script src="biden.js"></script>
 
-<button id="changeQuote">Change Quote</button>
+<button onclick="changeQuote()" id="changeQuote">Change Quote</button>
 
 
 </body>
