--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 
+<script src="biden.js"></script>
 
 <div class="container">
 	<div class="row">
