--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-  
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css'>
+    <script type="text/javascript"> 
+    var quote = new Array()
+    quote[0] = 'HTML for quote number 1'
+    quote[1] = 'HTML for quote number 2'
+    quote[2] = 'HTML for quote number 3'
+    quote[3] = 'HTML for quote number 4'
+
+    var randomquote = Math.floor(Math.random()*(quote.length));
+    function printquote(){
+    document.write(quote[randomquote]);
+    }
+    </script>
 
 </head>
 
 <body>
 
-<script src="biden.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js'></script>
-
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12 col-sm-3"></div>
-		<div class="col-xs-12 col-sm-6 quotebox">
-			<div class="row">
-				<div class="col-xs-12">
-					<blockquote>
-						<i class="fa fa-quote-left quotemark"></i>
-						<h2 id="quotetext"></h2>
-						<footer id="quotesource"></footer>
-					</blockquote>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-12">
-					<div class="social-icons icon-rounded"><a id="tweet-quote" title="Tweet this quote!" target="_blank"><i class="fa fa-twitter"></i></a>
-					</div>
-					<div class="quotebutton"><button class="btn btn-primary" id="newquote">New Quote</button></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-sm-3"></div>
-	</div>
-</div>
+    <script type="text/javascript>"
+    printquote();
+    </script>
 
 </body>
 
