--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ margin: 0;
 <p class="centeredtext">   <script type="text/javascript">  printquote(); </script> </p>
 </div>
 
+<button onclick="location.reload()">More</button>
+
 
 </body>
 
