--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@ margin: 0;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
+	font-size:42px;
+}
+
+.toptext {
+margin: 0;
+    background: green;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+	font-size:42px;
 }
 
 </style>
@@ -37,7 +47,7 @@ margin: 0;
 <body>
 
 <div id="container">
-   
+ <p class="toptext">   Biden will listen to Dr. Fauci and... </p>  
 <p class="centeredtext">   <script type="text/javascript">  printquote(); </script> </p>
 </div>
 
