--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@ container {
 
 .centeredtext {
 margin: 0;
-    background: yellow;
+    color: purple;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
 	font-size:42px;
+	font-family: Helvetica;
 }
 
 .toptext {
