--- a/index.html
+++ b/index.html
@@ -17,29 +17,20 @@
 container {
   position: relative;
   width: 100%;
-  max-width: 600px;
+  min-width: 300px;
+  min-height: 300px;
 }
 
 .centeredtext {
-margin: 0;
     color: purple;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-	font-size:42px;
+  	font-size:42px;
 	font-family: Helvetica;
 }
 
 .toptext {
 margin: 0;
     color: purple;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-	font-size:42px;
-	font-family: Helvetica;
+  	font-family: Helvetica;
 }
 
 .reload-button {
