--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@ container {
 }
 
 .centeredtext {
+	text-align:center;
     color: purple;
   	font-size:42px;
 	font-family: Helvetica;
 }
 
 .toptext {
-margin: 0;
+	text-align:center;
+	margin: 0;
     color: purple;
   	font-family: Helvetica;
 }
