--- a/index.html
+++ b/index.html
@@ -22,14 +22,22 @@ container {
 }
 
 .centeredtext {
-	text-align:center;
+	position: absolute;
+    top: 20%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     color: purple;
   	font-size:42px;
 	font-family: Helvetica;
 }
 
 .toptext {
-	text-align:center;
+	position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 	margin: 0;
     color: purple;
   	font-family: Helvetica;
