--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ container {
     transform: translate(-50%, -50%);
 	margin: 0;
     color: purple;
+	font-size:42px;
   	font-family: Helvetica;
 }
 
