--- a/index.html
+++ b/index.html
@@ -22,23 +22,15 @@ container {
 }
 
 .centeredtext {
-	position: absolute;
-    top: 20%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+	position: relative;
     color: purple;
   	font-size:42px;
 	font-family: Helvetica;
 }
 
 .toptext {
-	position: absolute;
-    top: 40%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-	margin: 0;
+	position: relative;
+    margin: 0;
     color: purple;
 	font-size:42px;
   	font-family: Helvetica;
@@ -46,11 +38,7 @@ container {
 
 .reload-button {
   color: purple;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    position: relative;
 	font-size:42px;
 	font-family: Helvetica;
 
