--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ container {
 
 .centeredtext {
 	position: relative;
+	text-align:center;
     color: purple;
   	font-size:42px;
 	font-family: Helvetica;
@@ -30,6 +31,7 @@ container {
 
 .toptext {
 	position: relative;
+	text-align:center;
     margin: 0;
     color: purple;
 	font-size:42px;
