--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ container {
 
 .reload-button {
   color: purple;
-    position: relative;
-	font-size:42px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto 	font-size:42px;
 	font-family: Helvetica;
 
 </style>
