--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <script type="text/javascript"> 
     var quote = new Array()
-    quote[0] = 'HTML for quote number 1'
-    quote[1] = 'HTML for quote number 2'
-    quote[2] = 'HTML for quote number 3'
+    quote[0] = 'and give away King Size Twix on Halloween.'
+    quote[1] = 'and not have a secret Chinese bank account.'
+    quote[2] = 'and'
     quote[3] = 'HTML for quote number 4'
 
     var randomquote = Math.floor(Math.random()*(quote.length));
@@ -42,7 +42,8 @@ container {
   color: purple;
   display: block;
     margin-left: auto;
-    margin-right: auto 	font-size:42px;
+    margin-right: auto;
+ 	font-size:42px;
 	font-family: Helvetica;
 
 </style>
@@ -52,7 +53,7 @@ container {
 <body>
 
 <div id="container">
- <p class="toptext">   Biden will listen to Dr. Fauci and... </p>  
+ <p class="toptext">   Biden will listen to Dr. Fauci</p>  
 <p class="centeredtext">   <script type="text/javascript">  printquote(); </script> </p>
 </div>
 
