--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     var quote = new Array()
     quote[0] = 'and give away King Size Twix on Halloween.'
     quote[1] = 'and not have a secret Chinese bank account.'
-    quote[2] = 'and'
-    quote[3] = 'HTML for quote number 4'
+    quote[2] = 'and wear a mask.'
+    quote[3] = 'and not have YUGE rallies.'
+    quote[4] = 'and not grab anyone by the pussy.'
+   quote[5] = 'and believe that humans cause climate change.'
+   quote[6] = 'and wash his Trans Am in the White House driveway.'
+	
 
     var randomquote = Math.floor(Math.random()*(quote.length));
     function printquote(){
