--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ container {
 <p class="centeredtext">   <script type="text/javascript">  printquote(); </script> </p>
 </div>
 
-<button class="reload-button" onclick="location.reload()">More</button>
+<button class="reload-button" onclick="location.reload()">Load more of Trump's attacks on Joe Biden</button>
 
 
 </body>
