--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ container {
 .toptext {
 	position: relative;
 	text-align:center;
-    margin: 0;
+    margin-top: 150px;
     color: purple;
 	font-size:42px;
   	font-family: Helvetica;
