--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     quote[0] = 'and give away King Size Twix on Halloween.'
     quote[1] = 'and not have a secret Chinese bank account.'
     quote[2] = 'and wear a mask.'
-    quote[3] = 'and not have YUGE rallies.'
+    quote[3] = 'and not have YUGE rallies right now.'
     quote[4] = 'and not grab anyone by the pussy.'
    quote[5] = 'and believe that humans cause climate change.'
    quote[6] = 'and wash his Trans Am in the White House driveway.'
+   quote[7] = 'and give people a high-fives AFTER the pandemic.'
+	quote[8] = 'and wash his Trans Am in the White House driveway.'
+	quote[9] = 'and let nerdy scientist give him advice about stuff.'
+	  quote[10] = 'and drastically cut the national levels of malarkey.'
+	  	  quote[11] = 'and appoint Elon Musk as ambassador to Mars.'
+		  quote[12] = 'and be a boring president.'
+
+		 
 	
 
     var randomquote = Math.floor(Math.random()*(quote.length));
@@ -29,7 +37,7 @@ container {
 	position: relative;
 	text-align:center;
     color: purple;
-  	font-size:42px;
+  	font-size:40px;
 	font-family: Helvetica;
 }
 
@@ -38,7 +46,7 @@ container {
 	text-align:center;
     margin-top: 150px;
     color: purple;
-	font-size:42px;
+	font-size:40px;
   	font-family: Helvetica;
 }
 
@@ -47,7 +55,7 @@ container {
   display: block;
     margin-left: auto;
     margin-right: auto;
- 	font-size:42px;
+ 	font-size:40px;
 	font-family: Helvetica;
 
 </style>
