--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
     <script type="text/javascript"> 
     var quote = new Array()
-    quote[0] = 'and give away King Size Twix on Halloween.'
-    quote[1] = 'and not have a secret Chinese bank account.'
-    quote[2] = 'and wear a mask.'
-    quote[3] = 'and not have YUGE rallies right now.'
-    quote[4] = 'and not grab anyone by the pussy.'
-   quote[5] = 'and believe that humans cause climate change.'
-   quote[6] = 'and wash his Trans Am in the White House driveway.'
-   quote[7] = 'and give people a high-fives AFTER the pandemic.'
-	quote[8] = 'and wash his Trans Am in the White House driveway.'
-	quote[9] = 'and let nerdy scientist give him advice about stuff.'
-	  quote[10] = 'and drastically cut the national levels of malarkey.'
-	  	  quote[11] = 'and appoint Elon Musk as ambassador to Mars.'
-		  quote[12] = 'and be a boring president.'
+    quote[0] = 'and give away King Size Twix on Halloween!'
+    quote[1] = 'and not have a secret Chinese bank account!'
+    quote[2] = 'and wear a mask!'
+    quote[3] = 'and not have YUGE rallies right now!'
+    quote[4] = 'and not grab anyone by the pussy!'
+	quote[5] = 'and believe that humans cause climate change!'
+	quote[6] = 'and wash his Trans Am in the White House driveway!'
+	quote[7] = 'and give people a high-fives AFTER the pandemic!'
+	quote[8] = 'and wash his Trans Am in the White House driveway!'
+	quote[9] = 'and let nerdy scientist give him advice about stuff!'
+	quote[10] = 'and drastically cut national levels of malarkey!'
+	quote[11] = 'and appoint Elon Musk as ambassador to Mars!'
+	quote[12] = 'and be a boring president!'
+	quote[13] = 'and promise to pack crunchwrap supremes with more sour cream and tomatoes!'
+	quote[14] = 'and wrap up his story in the next 15 minutes or so!'
+	quote[15] = 'and declare "Yes, we can" make his teeth even whiter and brighter!'
+	quote[16] = 'and use bleach only for laundry, never medical use!'
+
+	
+
+
 
 		 
 	
@@ -51,7 +59,9 @@ container {
 }
 
 .reload-button {
-  color: purple;
+  color: white;
+  background-color:blue;
+  padding: 10px 10px;
   display: block;
     margin-left: auto;
     margin-right: auto;
@@ -69,7 +79,7 @@ container {
 <p class="centeredtext">   <script type="text/javascript">  printquote(); </script> </p>
 </div>
 
-<button class="reload-button" onclick="location.reload()">Load more of Trump's attacks on Joe Biden</button>
+<button class="reload-button" onclick="location.reload()">More</button>
 
 
 </body>
