--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ container {
 
 .reload-button {
   color: white;
-  background-color:blue;
+  background-color:green;
   padding: 10px 10px;
   display: block;
     margin-left: auto;
