--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
 	quote[14] = 'and wrap up his story in the next 15 minutes or so'
 	quote[15] = 'and declare "Yes, we can" make his teeth even whiter and brighter'
 	quote[16] = 'and use bleach only for laundry, never medical use'
-	quote[17] = 'and use bleach only for laundry, never medical use'
+	quote[17] = 'and regularly travel in a new presidential train, Amtrak One'
 	quote[18] = 'and declare the oppossum the national marsupial'
+	quote[19] = 'and remember to smash the like button'
+	quote[20] = "and subscribe to your boyfriend's podcast"
+	quote[21] = 'and make avocado toast part of the school lunch program'
+	quote[22] = 'and greatly expand the national pumpkin spice reserve'
+	quote[23] = 'and never tweet in all caps'
+	quote[24] = 'and make avocado toast part of the school lunch program'
 		 
 	
 
