--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
 	quote[12] = 'and be a wonderfully boring president'
 	quote[13] = 'and promise to pack crunchwrap supremes with more sour cream and tomatoes'
 	quote[14] = 'and wrap up his story in the next 15 minutes or so'
-	quote[15] = 'and declare "Yes, we can" make his teeth even whiter and brighter'
+	quote[15] = 'and declare "Yes, we can" make Uncle Joe's teeth even whiter and brighter'
 	quote[16] = 'and use bleach only for laundry, never medical use'
 	quote[17] = 'and regularly travel in a new presidential train, Amtrak One'
-	quote[18] = 'and declare the oppossum the national marsupial'
+	quote[18] = 'and declare the opossum the national marsupial'
 	quote[19] = 'and remember to smash the like button'
 	quote[20] = "and subscribe to your boyfriend's podcast"
 	quote[21] = 'and make avocado toast part of the school lunch program'
 	quote[22] = 'and greatly expand the national pumpkin spice reserve'
 	quote[23] = 'and never tweet in all caps'
-	quote[24] = 'and make avocado toast part of the school lunch program'
-		 
-	
+	quote[24] = 'and regularly order Uber Eats to the White House'
+	quote[25] = 'and launch a moonshot initiative to have 5 cameras on an iPhone before the end of the decade'
+	quote[26] = 'and yeet Trump out of the White House'		 
+	quote[27] = 'and not try to kindle a bromance with Kim Jong-Un'	
+	quote[28] = 'and maybe call into Fox & Friends a bit less than his predecessor'	
+	quote[29] = 'and install a man cave in the White House residence'	
+	quote[30] = 'and follow basic public health practices like not holding superspreader events at the White House'	
+
+
 
     var randomquote = Math.floor(Math.random()*(quote.length));
     function printquote(){
