--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	quote[12] = 'and be a wonderfully boring president'
 	quote[13] = 'and promise to pack crunchwrap supremes with more sour cream and tomatoes'
 	quote[14] = 'and wrap up his story in the next 15 minutes or so'
-	quote[15] = 'and declare "Yes, we can" make Uncle Joe's teeth even whiter and brighter'
+	quote[15] = "and declare 'Yes, we can' make Uncle Joe's teeth even whiter and brighter"
 	quote[16] = 'and use bleach only for laundry, never medical use'
 	quote[17] = 'and regularly travel in a new presidential train, Amtrak One'
 	quote[18] = 'and declare the opossum the national marsupial'
