--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	quote[28] = 'and maybe call into Fox & Friends a bit less than his predecessor'	
 	quote[29] = 'and install a man cave in the White House residence'	
 	quote[30] = 'and follow basic public health practices like not holding superspreader events at the White House'	
+	quote[31] = 'and send out another round of $1200 checks if this tweet gets 10,000 likes'	
+	quote[32] = "and make sure we're ready for when COVID-20 hits next year"	
+	quote[33] = "and understand that it really, really, really isn't just  the flu"	
 
 
 
